优化 UI 组件并调整滑块宽度和间距 (#102)